--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <header class="header">
+    <a href="/">
+      <img src="assets/images/sa-logo.svg" alt="Simply Accessible" id="sa-logo">
+    </a>
+  </header>
+  <main class="main" id="main">
+    <h1>
+      Angular Forms Demo
+      <span class="lead">Next-Level Accessibility 💪</span>
+    </h1>
+    <app-contact-form></app-contact-form>
+    <div class="alert alert-warning">This form is a demo component from the article, <a href="https://simplyaccessible.com">Creating Accessible Forms with Angular</a>. You can check out the <a href="https://github.com/simplyaccessible/angular-forms-next-level-a11y">source code on GitHub</a> as well as the alternate-component form, <a href="https://simplyaccessible.github.io/angular-forms-some-a11y">Angular Forms Demo &ndash; Some Accessibility</a>.</div>
+  </main>
+  <footer class="footer breadcrumb">Copyright &copy; <a href="https://simplyaccessible.com">Simply Accessible Inc</a>. All Rights Reserved.</footer>
+</div>
