--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -21,7 +21,7 @@
 
       <div id="error-bucket" class="error-notice panel panel-danger" *ngIf="!contactForm.valid && submitted">
         <div class="panel-heading">
-          <h3 id="error-heading" class="panel-title" tabindex="-1"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span> Hang on, let's address these first</h3>
+          <h3 id="error-heading" class="panel-title" tabindex="-1"><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span> Hang on, let's address these errors first</h3>
         </div>
         <div class="panel-body">
           <ul id="error-list" class="error-list">
